--- a/React/react-basic/habit-tracker/src/app.css
+++ b/React/react-basic/habit-tracker/src/app.css
@@ -38,10 +38,26 @@
 }
 
 /* 여기서부터 이 프로젝트만의 것 */
+
+* {
+  box-sizing: border-box;
+}
+
 button {
   outline: none;
   border: 0;
   cursor: pointer;
+}
+
+.navbar {
+  font-size: 2rem;
+  padding: 1em;
+  background-color: rgb(208, 222, 201);
+}
+
+.navbar-logo {
+  color: green;
+  margin-right: 0.5em;
 }
 
 .habit {
@@ -50,7 +66,8 @@ button {
   list-style: none;
 }
 
-.habit-count {
+.habit-count,
+.navbar-count {
   display: inline-block;
   text-align: center;
   font-size: 2rem;
